commit on 'master'

--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">About</div>
-            <p>I am a creative, ambitious and hardworking individual, with broad skills and experience in UI/UX Design,
-               Front-End Development and Graphics Design and so very energetic and eager to learn new skills. 
-               I am adept at handling multiple tasks on a daily basis competently and building strong relationships
-                with people in order to deliver the best results.</p>
+            <p>I am a creative, industrious, and diligent individual with a diverse set of skills and experience in UI/UX Design,
+               Front-End Development and Graphics Design as well as a strong desire to learn new skills. 
+               I am adept at handling multiple responsibilities competently on a daily basis and building great relationships
+                with people in order to achieve the best results.</p>
           </div>
         </div>
         <div class="col-lg-6 col-md-12">
@@ -228,10 +228,10 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Information and Communication Technology (ICT) | Computer Engineer</div>
-            <p>Delivered IT support and providing clients with information on available upgrades</p>
-            <p>Managed the installation and configuration of laptops and computers</p>
-            <p>Conducted troubleshooting to resolved IT/computer related issues</p>
-            <p>Repaired emergency networking issues and maintenance activities</p>
+            <p>Delivered IT support and provided clients with information on available upgrades.</p>
+            <p>Managed the installation and configuration of laptops and computers.</p>
+            <p>Conducted troubleshooting to resolve IT/computer related issues.</p>
+            <p>Repaired emergency networking issues and maintenance activities.</p>
           </div>
         </div>
       </div>
@@ -247,9 +247,9 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Front-End Web Developer / Graphics Designer</div>
-            <p>Revamped the UI and interface of an e-commerce site using HTML, CSS, Angular.</p>
-            <p>Developed user interfaces designs for Various Screen Sizes</p>
-            <p>Diagnosed and resolved a range of software, hardware, and connectivity issues</p>
+            <p>Revamped the UI and interface of an e-commerce site using HTML, CSS, and Angular.</p>
+            <p>Developed user interfaces designs for different screen sizes.</p>
+            <p>Diagnosed and resolved a range of software, hardware, and connectivity issues.</p>
           </div>
         </div>
       </div>
@@ -265,10 +265,10 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Web Developer & Graphics | Intern</div>
-            <p>Developed new UI for website landing pages using WordPress and HTML email templates</p>
+            <p>Developed new UI for website landing pages using WordPress and HTML email templates.</p>
             <p>Worked closely with programmers and clients to meet project requirements, goals and desired functionality.</p>
-            <p>Designed and developed user-friendly website using WordPress</p>
-            <p>Fixed bugs from existing websites and implemented enhancement that improved web functionality</p>
+            <p>Designed and developed user-friendly website using WordPress.</p>
+            <p>Fixed bugs from existing websites and implemented enhancement that improved web functionality.</p>
           </div>
         </div>
       </div>
@@ -280,13 +280,13 @@
     <div class="h4 text-center mb-4 title">Education</div>
     <div class="card">
       <div class="row">
-        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500" style="height: 100px;">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500" style="height: 120px;">
           <div class="card-body cc-education-header">
             <p>March 2021 – Present</p>
             <div class="h5">Master's Degree</div>
           </div>
         </div>
-        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500" style="height: 100px;">
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500" style="height: 120px;">
           <div class="card-body">
             <div class="h5">M.Sc. Computer Science</div>
             <p class="category">University of Ibadan</p>
@@ -297,32 +297,32 @@
     </div>
     <div class="card">
       <div class="row">
-        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500" style="height: 100px;">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500" style="height: 120px;">
           <div class="card-body cc-education-header">
             <p>September 2014 – June 2018</p>
             <div class="h5">Bachelor's Degree</div>
           </div>
         </div>
-        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500" style="height: 100px;">
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500" style="height: 120px;">
           <div class="card-body">
             <div class="h5">B.Sc. (Hons.) Computer Science</div>
-            <p class="category">Bowen University Iwo</p>
+            <p class="category">Bowen University</p>
           </div>
         </div>
       </div>
     </div>
     <div class="card">
       <div class="row">
-        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500" style="height: 100px;">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500" style="height: 120px;">
           <div class="card-body cc-education-header">
             <p>September 2010 – July 2013</p>
             <div class="h5">Secondary School</div>
           </div>
         </div>
-        <div class="col-md-9" data-aos="fade-left" data-aos-offset="30" data-aos-duration="500" style="height: 100px;">
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="30" data-aos-duration="500" style="height: 120px;">
           <div class="card-body">
             <div class="h5">West Africa Senior School Certificate</div>
-            <p class="category">Federal Government Girls College, Ipetumodu</p>
+            <p class="category">Federal Government Girls' College Ipetumodu</p>
           </div>
         </div>
       </div>
@@ -384,7 +384,7 @@
                 <div class="col-md-6">
                   <div class="card-body">
                     <p class="mb-0"><strong>Address </strong></p>
-                    <p class="pb-2">Road 9A House A1, OAU Senior Staff Quarters, Ile-Ife, Osun state.</p>
+                    <p class="pb-2">OAU Senior Staff Quarters, Ile-Ife, Osun state.</p>
                     <p class="mb-0"><strong>Phone Number</strong></p>
                     <p class="pb-2">+2348088146132</p>
                     <p class="mb-0"><strong>Email</strong></p>
