commit on 'master'

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="content-center">
           <div class="cc-profile-image"><a href="#"><img src="img/imageMe2.jpeg" alt="Image"/></a></div>
           <div class="h2 title">BAMIRE TEMITOPE. R</div>
-          <p class="category text-white">Front-End Developer, UI/UX Designer & Graphic Designer</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="img/Temitope Bamire Resume.doc" target="_blank" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
+          <p class="category text-white">Front-End Developer, UI/UX Designer & Graphic Designer</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="img/Temitope Bamire Resume.pdf" target="_blank" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
         </div>
       </div>
       <div class="section">
