commit on 'master'

--- a/index.html
+++ b/index.html
@@ -196,13 +196,23 @@
                       <p>UI/UX Design | HNG</p>
                     </figcaption>
                   </figure></a>
-                </div>
               </div>
+            </div>
+            <div class="col-md-6">
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#">
+                  <figure class="cc-effect"><img src="img/Food Order App.png" alt="Image"/>
+                    <figcaption>
+                      <div class="h4">TASK 2</div>
+                      <p>UI/UX Design | HNG</p>
+                    </figcaption>
+                  </figure></a>
+              </div>
+            </div>
             <div class="col-md-6">
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#">
                   <figure class="cc-effect"><img src="img/Landing Page.png" alt="Image"/>
                     <figcaption>
-                      <div class="h4">TASK 2</div>
+                      <div class="h4">TASK 3</div>
                       <p>UI/UX Design | HNG</p>
                     </figcaption>
                   </figure></a>
@@ -402,11 +412,6 @@
     </div>
     <footer class="footer">
       <div class="container text-center"><a class="cc-facebook btn btn-link" href="https://www.facebook.com/bestar.lee"><i class="fa fa-facebook fa-2x " aria-hidden="true"></i></a><a class="cc-twitter btn btn-link " href="https://www.twitter.com/_bestarh"><i class="fa fa-twitter fa-2x " aria-hidden="true"></i></a><a class="cc-google-plus btn btn-link" href="http://linkedin.com/in/temitope-bamire-107872108"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a><a class="cc-instagram btn btn-link" href="https://www.instagram.com/t_bestarh"><i class="fa fa-instagram fa-2x " aria-hidden="true"></i></a></div> &nbsp;
-      <div style="text-align: center;">
-        <a  href="https://hng.tech/"><img src="logo/brand-logo.png" alt="HNG" width="200px;" height="40px;"></a>
-        <a  href="https://www.instagram.com/thezuriteam/"><img src="logo/zuri.png" alt="HNG" width="80px;" height="40px;"></a>
-        <a  href="https://hng.tech/"><img src="logo/I4G-Logo.png" alt="HNG" width="200px;" height="40px;"></a>
-      </div>&nbsp;
       <div class="text-center text-muted">
       <p>&copy; TBESTARH. All rights reserved.</p>
       </div>
