commit to 'master'

--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
         <div class="content-center">
           <div class="cc-profile-image"><a href="#"><img src="img/imageMe2.jpeg" alt="Image"/></a></div>
           <div class="h2 title">BAMIRE TEMITOPE. R</div>
-          <p class="category text-white">Front-End Developer, UI/UX Designer & Graphic Designer</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="img/Temitope Bamire Resume.pdf" target="_blank" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
+          <p class="category text-white">Front-End Developer, UI/UX Designer & Graphic Designer</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="img/BAMIRE TEMITOPE RACHAEL_CV.pdf" target="_blank" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
         </div>
       </div>
       <div class="section">
         <div class="container">
-          <div class="button-container"><a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.facebook.com/bestar.lee" rel="tooltip" title="Follow me on Facebook"><i class="fa fa-facebook"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.twitter.com/_bestarh" rel="tooltip" title="Follow me on Twitter"><i class="fa fa-twitter"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="http://linkedin.com/in/temitope-bamire-107872108" rel="tooltip" title="Follow me on LinkedIn"><i class="fa fa-linkedin"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.instagram.com/t_bestarh" rel="tooltip" title="Follow me on Instagram"><i class="fa fa-instagram"></i></a></div>
+          <div class="button-container"><a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.facebook.com/bestar.lee" rel="tooltip" title="Follow me on Facebook"><i class="fa fa-facebook"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.twitter.com/_bestarh" rel="tooltip" title="Follow me on Twitter"><i class="fa fa-twitter"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="http://linkedin.com/in/temitope-bamire-107872108" rel="tooltip" title="Follow me on LinkedIn"><i class="fa fa-linkedin"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.instagram.com/temitopebamire" rel="tooltip" title="Follow me on Instagram"><i class="fa fa-instagram"></i></a></div>
         </div>
       </div>
     </div>
@@ -193,7 +193,7 @@
                   <figure class="cc-effect"><img src="img/Activity Manager.png" alt="Image"/>
                     <figcaption>
                       <div class="h4">TASK 1</div>
-                      <p>UI/UX Design | HNG</p>
+                      <p>UI/UX Design </p>
                     </figcaption>
                   </figure></a>
               </div>
@@ -203,7 +203,17 @@
                   <figure class="cc-effect"><img src="img/Food Order App.png" alt="Image"/>
                     <figcaption>
                       <div class="h4">TASK 2</div>
-                      <p>UI/UX Design | HNG</p>
+                      <p>UI/UX Design </p>
+                    </figcaption>
+                  </figure></a>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#">
+                  <figure class="cc-effect"><img src="img/Mobile App Design.png" alt="Image"/>
+                    <figcaption>
+                      <div class="h4">TASK 3</div>
+                      <p>UI/UX Design </p>
                     </figcaption>
                   </figure></a>
               </div>
@@ -212,11 +222,21 @@
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#">
                   <figure class="cc-effect"><img src="img/Landing Page.png" alt="Image"/>
                     <figcaption>
-                      <div class="h4">TASK 3</div>
-                      <p>UI/UX Design | HNG</p>
+                      <div class="h4">TASK 4</div>
+                      <p>UI/UX Design </p>
                     </figcaption>
                   </figure></a>
                 </div>
+            </div>
+            <div class="col-md-6">
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#">
+                  <figure class="cc-effect"><img src="img/QRCode.png" alt="Image"/>
+                    <figcaption>
+                      <div class="h4">TASK 5</div>
+                      <p>UI/UX Design </p>
+                    </figcaption>
+                  </figure></a>
+              </div>
             </div>
           </div>
         </div>
@@ -411,7 +431,7 @@
 </div></div>
     </div>
     <footer class="footer">
-      <div class="container text-center"><a class="cc-facebook btn btn-link" href="https://www.facebook.com/bestar.lee"><i class="fa fa-facebook fa-2x " aria-hidden="true"></i></a><a class="cc-twitter btn btn-link " href="https://www.twitter.com/_bestarh"><i class="fa fa-twitter fa-2x " aria-hidden="true"></i></a><a class="cc-google-plus btn btn-link" href="http://linkedin.com/in/temitope-bamire-107872108"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a><a class="cc-instagram btn btn-link" href="https://www.instagram.com/t_bestarh"><i class="fa fa-instagram fa-2x " aria-hidden="true"></i></a></div> &nbsp;
+      <div class="container text-center"><a class="cc-facebook btn btn-link" href="https://www.facebook.com/bestar.lee"><i class="fa fa-facebook fa-2x " aria-hidden="true"></i></a><a class="cc-twitter btn btn-link " href="https://www.twitter.com/_bestarh"><i class="fa fa-twitter fa-2x " aria-hidden="true"></i></a><a class="cc-google-plus btn btn-link" href="http://linkedin.com/in/temitope-bamire-107872108"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a><a class="cc-instagram btn btn-link" href="https://www.instagram.com/temitopebamire"><i class="fa fa-instagram fa-2x " aria-hidden="true"></i></a></div> &nbsp;
       <div class="text-center text-muted">
       <p>&copy; TBESTARH. All rights reserved.</p>
       </div>
