commit on 'master'

--- a/index.html
+++ b/index.html
@@ -440,9 +440,9 @@
                 <div class="col-md-6">
                   <div class="card-body">
                     <p class="mb-0"><strong>Address </strong></p>
-                    <p class="pb-2">OAU Senior Staff Quarters, Ile-Ife, Osun state.</p>
+                    <p class="pb-2">University of Ibadan, Ibadan, Oyo State.</p>
                     <p class="mb-0"><strong>Phone Number</strong></p>
-                    <p class="pb-2">+2348088146132</p>
+                    <p class="pb-2">+2348088146132, +2349055937907</p>
                     <p class="mb-0"><strong>Email</strong></p>
                     <p><a href="mailto:temitopebamire@gmail.com">temitopebamire@gmail.com</a></p>
                   </div>
