--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
                     <i class="fa fa-caret-down"></i>
                   </li>
                   <div class="dropdown-content">
-                    <a href="#">Link 1</a>
-                    <a href="#">Link 2</a>
-                    <a href="#">Link 3</a>
+                    <a href="#">Front-End Dev</a>
+                    <a href="#">UI/UX Design</a>
+                    <a href="#">Graphics Design</a>
                   </div>
                 </div>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#portfolio">Portfolio</a></li>
