--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#about">About</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#skill">Skills</a></li>
-                <div class="nav-item dropdown">
+                <!-- <div class="nav-item dropdown">
                   <li class="nav-link smooth-scroll">Portfolio
                     <i class="fa fa-caret-down"></i>
                   </li>
@@ -41,7 +41,7 @@
                     <a href="#">UI/UX Design</a>
                     <a href="#">Graphics Design</a>
                   </div>
-                </div>
+                </div> -->
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#portfolio">Portfolio</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">Experience</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact</a></li>
