--- a/index.html
+++ b/index.html
@@ -37,12 +37,13 @@
                     <i class="fa fa-caret-down"></i>
                   </li>
                   <div class="dropdown-content">
-                    <a href="#">Front-End Dev</a>
-                    <a href="#">UI/UX Design</a>
-                    <a href="#">Graphics Design</a>
+                    <a href="#portfolio">Front-End Dev</a>
+                    <a href="#portfolio">UI/UX Design</a>
+                    <a href="#portfolio">Graphics Design</a>
                   </div>
                 </div> -->
-                <li class="nav-item"><a class="nav-link smooth-scroll" href="#portfolio">Portfolio</a></li>
+                class="nav-item"><a class="nav-link smooth-scroll" href="#certification">Certifications</a></li>
+                <li class="nav-item"><a class="nav-link smooth-scroll" href="#education">Education</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">Experience</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact</a></li>
               </ul>
@@ -61,12 +62,12 @@
         <div class="content-center">
           <div class="cc-profile-image"><a href="#"><img src="img/imageMe2.jpeg" alt="Image"/></a></div>
           <div class="h2 title">BAMIRE TEMITOPE. R</div>
-          <p class="category text-white">Front-End Developer, UI/UX Designer & Graphic Designer</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="img/BAMIRE TEMITOPE RACHAEL_CV.pdf" target="_blank" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
+          <p class="category text-white">Application Support Analyst (core-banking), Front-End Developer & UI/UX Designer </p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="img/Bamire, Temitope Rachael_ CV.pdf" target="_blank" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>
         </div>
       </div>
       <div class="section">
         <div class="container">
-          <div class="button-container"><a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.facebook.com/bestar.lee" rel="tooltip" title="Follow me on Facebook"><i class="fa fa-facebook"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.twitter.com/_bestarh" rel="tooltip" title="Follow me on Twitter"><i class="fa fa-twitter"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="http://linkedin.com/in/temitope-bamire-107872108" rel="tooltip" title="Follow me on LinkedIn"><i class="fa fa-linkedin"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.instagram.com/temitopebamire" rel="tooltip" title="Follow me on Instagram"><i class="fa fa-instagram"></i></a></div>
+          <div class="button-container"><a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.facebook.com/bestar.lee" rel="tooltip" title="Follow me on Facebook"><i class="fa fa-facebook"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.twitter.com/_bestarh" rel="tooltip" title="Follow me on Twitter"><i class="fa fa-twitter"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.linkedin.com/in/temitope-bamire/" rel="tooltip" title="Follow me on LinkedIn"><i class="fa fa-linkedin"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.instagram.com/temitopebamire" rel="tooltip" title="Follow me on Instagram"><i class="fa fa-instagram"></i></a></div>
         </div>
       </div>
     </div>
@@ -79,10 +80,9 @@
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">About</div>
-            <p>I am a creative, industrious, and diligent individual with a diverse set of skills and experience in UI/UX Design,
-               Front-End Development and Graphics Design as well as a strong desire to learn new skills. 
-               I am adept at handling multiple responsibilities competently on a daily basis and building great relationships
-                with people in order to achieve the best results.</p>
+            <p style="text-align: justify">I am a creative, industrious, and diligent individual with diverse skills and expertise in Structured Query Language (SQL), 
+              Front-End Development, and UI/UX Design, and a strong desire to learn new skills. I am adept at handling multiple responsibilities 
+              competently daily and building great relationships with people to achieve the best results.</p>
           </div>
         </div>
         <div class="col-lg-6 col-md-12">
@@ -98,7 +98,7 @@
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">State of Origin:</strong></div>
-              <div class="col-sm-8">Odo-Otin</div>
+              <div class="col-sm-8">Osun</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Date of Birth:</strong></div>
@@ -144,7 +144,7 @@
             </div>
           </div>
           <div class="col-md-6">
-            <div class="progress-container progress-primary"><span class="progress-badge">Python</span>
+            <div class="progress-container progress-primary"><span class="progress-badge">SQL</span>
               <div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div><span class="progress-value">60%</span>
               </div>
@@ -192,7 +192,7 @@
             </div>
           </div>
           <div class="col-md-6">
-            <div class="progress-container progress-primary"><span class="progress-badge">Photoshop</span>
+            <div class="progress-container progress-primary"><span class="progress-badge">PYTHON</span>
               <div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 65%;"></div><span class="progress-value">65%</span>
               </div>
@@ -203,7 +203,58 @@
     </div>
   </div>
 </div>
-<div class="section" id="portfolio">
+<div class="section" id="certification">
+  <div class="container cc-certification">
+    <div class="h4 text-center mb-4 title">Professional Certifications</div>
+    <div class="card">
+      <div class="row">
+        <div class="shadow-1-strong bg-white my-5 p-5" id="certification">
+          <div class="certification-section">
+            <div class="timeline">
+              <div class="timeline-card timeline-card-info" data-aos="fade-in" data-aos-delay="0">
+                <div class="timeline-head px-4 pt-3">
+                  <div class="h5">Design Thinking for Beginners | Simplilearn</span></div>
+                </div>
+              </div>
+              <div class="timeline-card timeline-card-info" data-aos="fade-in" data-aos-delay="0">
+                <div class="timeline-head px-4 pt-3">
+                  <div class="h5">UI/UX Design using AdobeXD | Alison</span></div>
+                </div>
+              </div>
+              <div class="timeline-card timeline-card-info" data-aos="fade-in" data-aos-delay="0">
+                <div class="timeline-head px-4 pt-3">
+                  <div class="h5">User Interface / User Experience Certification | Great Learning</span></div>
+                </div>
+              </div>
+              <div class="timeline-card timeline-card-info" data-aos="fade-in" data-aos-delay="200">
+                <div class="timeline-head px-4 pt-3">
+                  <div class="h5">Jobberman Accelerated Soft Skills Course | Coursera</span></div>
+                </div>
+              </div>
+              <div class="timeline-card timeline-card-info" data-aos="fade-in" data-aos-delay="400">
+                <div class="timeline-head px-4 pt-3">
+                  <div class="h5">Jobberman Soft Skills Training Certification</span></div>
+                </div>
+              </div>
+              <div class="timeline-card timeline-card-info" data-aos="fade-in" data-aos-delay="600">
+                <div class="timeline-head px-4 pt-3">
+                  <div class="h5">Master Web Development For Beginners | Udemy</span></div>
+                </div>
+              </div>
+              <div class="timeline-card timeline-card-info" data-aos="fade-in" data-aos-delay="800">
+                <div class="timeline-head px-4 pt-3">
+                  <div class="h5">CompTIA A+ Technician & CompTIA Network+</span></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- <div class="section" id="portfolio">
   <div class="container">
     <div class="row">
       <div class="col-md-6 ml-auto mr-auto">
@@ -269,10 +320,46 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 <div class="section" id="experience">
   <div class="container cc-experience">
     <div class="h4 text-center mb-4 title">Work Experience</div>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-experience-header">
+            <p>September 2022 – Present</p>
+            <div class="h5">Access Bank PLC</div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Flexcube Application Support Analyst (Core-Banking)</div>
+            <p>Support the Bank's applications.</p>
+            <p>Provide 2nd Level user support for Flexcube (or other third-party application) escalated problems.</p>
+            <p>Follow-up on escalated problems, effective and efficient management of User Support to the Bank's IT resources.</p>
+            <p>Proficient in office automation tools (Microsoft Office Suite).</p>
+            <p>Proficient in Oracle SQL.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-experience-header">
+            <p>May 2022 – September 2022</p>
+            <div class="h5">RichFill Multi-Service Enterprises</div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Product (UI/UX) Designer | Front-End Developer</div>
+            
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="card">
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
@@ -331,14 +418,14 @@
     </div>
   </div>
 </div>
-<div class="section">
+<div class="section" id="education">
   <div class="container cc-education">
     <div class="h4 text-center mb-4 title">Education</div>
     <div class="card">
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500" style="height: 120px;">
           <div class="card-body cc-education-header">
-            <p>March 2021 – Present</p>
+            <p>November 2020 – Present</p>
             <div class="h5">Master's Degree</div>
           </div>
         </div>
@@ -389,7 +476,7 @@
   <p>AVAILABLE ON REQUEST</p>
 </div>
 <div class="section" id="contact">
-  <div class="cc-contact-information" style="background-image: url('img/staticmap.png')">
+  <div class="cc-contact-information" style="background-image: url('img/location.png')">
     <div class="container">
       <div class="cc-contact">
         <div class="row">
@@ -440,9 +527,9 @@
                 <div class="col-md-6">
                   <div class="card-body">
                     <p class="mb-0"><strong>Address </strong></p>
-                    <p class="pb-2">University of Ibadan, Ibadan, Oyo State.</p>
+                    <p class="pb-2">University of Lagos, Lagos State.</p>
                     <p class="mb-0"><strong>Phone Number</strong></p>
-                    <p class="pb-2">+2348088146132, +2349055937907</p>
+                    <p class="pb-2">+2349161023936, +2348088146132</p>
                     <p class="mb-0"><strong>Email</strong></p>
                     <p><a href="mailto:temitopebamire@gmail.com">temitopebamire@gmail.com</a></p>
                   </div>
@@ -454,12 +541,14 @@
       </div>
     </div>
   </div>
-</div></div>
-    </div>
+</div>
+</div>
+</div>
+</div>
     <footer class="footer">
-      <div class="container text-center"><a class="cc-facebook btn btn-link" href="https://www.facebook.com/bestar.lee"><i class="fa fa-facebook fa-2x " aria-hidden="true"></i></a><a class="cc-twitter btn btn-link " href="https://www.twitter.com/_bestarh"><i class="fa fa-twitter fa-2x " aria-hidden="true"></i></a><a class="cc-google-plus btn btn-link" href="http://linkedin.com/in/temitope-bamire-107872108"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a><a class="cc-instagram btn btn-link" href="https://www.instagram.com/temitopebamire"><i class="fa fa-instagram fa-2x " aria-hidden="true"></i></a></div> &nbsp;
+      <div class="container text-center"><a class="cc-facebook btn btn-link" href="https://www.facebook.com/bestar.lee"><i class="fa fa-facebook fa-2x " aria-hidden="true"></i></a><a class="cc-twitter btn btn-link " href="https://www.twitter.com/_bestarh"><i class="fa fa-twitter fa-2x " aria-hidden="true"></i></a><a class="cc-google-plus btn btn-link" href="https://www.linkedin.com/in/temitope-bamire/"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a><a class="cc-instagram btn btn-link" href="https://www.instagram.com/temitopebamire"><i class="fa fa-instagram fa-2x " aria-hidden="true"></i></a></div> &nbsp;
       <div class="text-center text-muted">
-      <p>&copy; TEMITOPE BAMIRE. All rights reserved.</p>
+      <p>&copy; TEMITOPE BAMIRE | All rights reserved.</p>
       </div>
     </footer>
     <script src="js/core/jquery.3.2.1.min.js?ver=1.1.0"></script>
@@ -469,4 +558,4 @@
     <script src="js/aos.js?ver=1.1.0"></script>
     <script src="scripts/main.js?ver=1.1.0"></script>
   </body>
-</html>
+</html> 
