--- a/index.html
+++ b/index.html
@@ -333,38 +333,38 @@
           <div class="certification-section">
             <div class="timeline">
               <div class="timeline-card timeline-card-info" data-aos="fade-in" data-aos-delay="0">
-                <div class="timeline-head px-4 pt-3">
-                  <div class="h5">Design Thinking for Beginners | Simplilearn</span></div>
+                <div class="timeline-head px-4 pt-4">
+                  <div class="h6">Design Thinking for Beginners | Simplilearn</span></div>
                 </div>
               </div>
               <div class="timeline-card timeline-card-info" data-aos="fade-in" data-aos-delay="0">
-                <div class="timeline-head px-4 pt-3">
-                  <div class="h5">UI/UX Design using AdobeXD | Alison</span></div>
+                <div class="timeline-head px-4 pt-4">
+                  <div class="h6">UI/UX Design using AdobeXD | Alison</span></div>
                 </div>
               </div>
               <div class="timeline-card timeline-card-info" data-aos="fade-in" data-aos-delay="0">
-                <div class="timeline-head px-4 pt-3">
-                  <div class="h5">User Interface / User Experience Certification | Great Learning</span></div>
+                <div class="timeline-head px-4 pt-4">
+                  <div class="h6">User Interface / User Experience Certification | Great Learning</span></div>
                 </div>
               </div>
               <div class="timeline-card timeline-card-info" data-aos="fade-in" data-aos-delay="200">
-                <div class="timeline-head px-4 pt-3">
-                  <div class="h5">Jobberman Accelerated Soft Skills Course | Coursera</span></div>
+                <div class="timeline-head px-4 pt-4">
+                  <div class="h6">Jobberman Accelerated Soft Skills Course | Coursera</span></div>
                 </div>
               </div>
               <div class="timeline-card timeline-card-info" data-aos="fade-in" data-aos-delay="400">
-                <div class="timeline-head px-4 pt-3">
-                  <div class="h5">Jobberman Soft Skills Training Certification</span></div>
+                <div class="timeline-head px-4 pt-4">
+                  <div class="h6">Jobberman Soft Skills Training Certification</span></div>
                 </div>
               </div>
               <div class="timeline-card timeline-card-info" data-aos="fade-in" data-aos-delay="600">
-                <div class="timeline-head px-4 pt-3">
-                  <div class="h5">Master Web Development For Beginners | Udemy</span></div>
+                <div class="timeline-head px-4 pt-4">
+                  <div class="h6">Master Web Development For Beginners | Udemy</span></div>
                 </div>
               </div>
               <div class="timeline-card timeline-card-info" data-aos="fade-in" data-aos-delay="800">
-                <div class="timeline-head px-4 pt-3">
-                  <div class="h5">CompTIA A+ Technician & CompTIA Network+</span></div>
+                <div class="timeline-head px-4 pt-4">
+                  <div class="h6">CompTIA A+ Technician & CompTIA Network+</span></div>
                 </div>
               </div>
             </div>
@@ -382,80 +382,80 @@
         <div class="row">
           <div class="col-md-6">
             <div class="progress-container progress-primary"><span class="progress-badge">HTML</span>
-              <div class="progress">
+              <!-- <div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div><span class="progress-value">80%</span>
-              </div>
+              </div> -->
             </div>
           </div>
           <div class="col-md-6">
             <div class="progress-container progress-primary"><span class="progress-badge">CSS</span>
-              <div class="progress">
+              <!-- <div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div><span class="progress-value">75%</span>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
         <div class="row">
           <div class="col-md-6">
             <div class="progress-container progress-primary"><span class="progress-badge">JavaScript</span>
-              <div class="progress">
+              <!-- <div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;"></div><span class="progress-value">50%</span>
-              </div>
+              </div> -->
             </div>
           </div>
           <div class="col-md-6">
             <div class="progress-container progress-primary"><span class="progress-badge">SQL</span>
-              <div class="progress">
+              <!-- <div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div><span class="progress-value">60%</span>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
         <div class="row">
           <div class="col-md-6">
             <div class="progress-container progress-primary"><span class="progress-badge">Microsoft Office Suite</span>
-              <div class="progress">
+              <!-- <div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div><span class="progress-value">90%</span>
-              </div>
+              </div> -->
             </div>
           </div>
           <div class="col-md-6">
             <div class="progress-container progress-primary"><span class="progress-badge">FIGMA</span>
-              <div class="progress">
+              <!-- <div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div><span class="progress-value">75%</span>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
         <div class="row">
           <div class="col-md-6">
             <div class="progress-container progress-primary"><span class="progress-badge">CORELDRAW</span>
-              <div class="progress">
+              <!-- <div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div><span class="progress-value">70%</span>
-              </div>
+              </div> -->
             </div>
           </div>
           <div class="col-md-6">
             <div class="progress-container progress-primary"><span class="progress-badge">ADOBEXD</span>
-              <div class="progress">
+              <!-- <div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100" style="width: 55%;"></div><span class="progress-value">55%</span>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
         <div class="row">
           <div class="col-md-6">
             <div class="progress-container progress-primary"><span class="progress-badge">Bootstrap</span>
-              <div class="progress">
+              <!-- <div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div><span class="progress-value">70%</span>
-              </div>
+              </div> -->
             </div>
           </div>
           <div class="col-md-6">
             <div class="progress-container progress-primary"><span class="progress-badge">PYTHON</span>
-              <div class="progress">
+              <!-- <div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 65%;"></div><span class="progress-value">65%</span>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
